                                                     -*- coding: utf-8 -*-
Changes with APR-util 1.4.0

  *) Add apr_crypto implementations for OpenSSL and Mozilla NSS. Add a unit
     test to verify the interoperability of the two modules. Builds default
     to disabled unless explicitly enabled.
     [Graham Leggett]

  *) Add the apr_crypto interface, a rewrite of the earlier apr_ssl code,
     based on the modular dso interface used for dbd and ldap. Initially,
     the interface supports symmetrical encryption and decryption. The
     purpose of the interface is to offer portable and interoperable
     access to basic crypto using the native crypto libraries present on
     each platform. [Graham Leggett]

  *) Expose the apr_dso_handle_t when calling apu_dso_load, so that the
     crypto code can call apr_dso_error and find out why the dso load
     failed. The existing LDAP and DBD code ignores this, as their APIs
     do not yet allow for errors to be returned. [Graham Leggett]

  *) Fix a segfault in the DBD testcase when the DBD modules were not present.
     [Graham Leggett]

  *) Add DTrace Probes to Hooks, making it easier to inspect APR Hook based
     applications with DTrace. [Theo Schlossnagle <jesus omniti.com>]

  *) Add ODBC DBD driver [Tom Donovan]

  *) Older OpenLDAP implementations may have ldap_set_rebind_proc() with two
     args. Provide detection code and alternative implementation.
     [Ruediger Pluem]

  *) Add Berkeley DB 4.7 support.
     [Arfrever Frehtes Taifersar Arahesis <arfrever.fta gmail.com>]

  *) PostgreSQL rows (internally) start from zero, not one. Account for it in
     row fetching function. [Bojan Smojver]

  *) Detection of PostgreSQL may fail if LIBS contains all libs returned by
     pg_config. Use it only as the last resort. [Bojan Smojver]

  *) When searching for DSOs, look in apr-util-APU_MAJOR_VERSION subdirectory
     of each component of APR_DSOPATH. PR 45327
     [Joe Orton, William Rowe, Bojan Smojver]
