@@ -119,6 +119,10 @@
 /* Windows always has ODBC */
 #define APU_HAVE_ODBC           1
 
+#define APU_HAVE_CRYPTO         0
+#define APU_HAVE_OPENSSL        0
+#define APU_HAVE_NSS            0
+
 #define APU_HAVE_APR_ICONV      1
 #define APU_HAVE_ICONV          0
 #define APR_HAS_XLATE           (APU_HAVE_APR_ICONV || APU_HAVE_ICONV)
