@@ -1,6 +1,9 @@
                                                      -*- coding: utf-8 -*-
 Changes with APR-util 1.4.0
 
+  *) Move APU_HAVE_CRYPTO from private apu_config.h to public apu.h.
+     [Ruediger Pluem, Graham Leggett]
+
   *) Add apr_crypto implementations for OpenSSL and Mozilla NSS. Add a unit
      test to verify the interoperability of the two modules. Builds default
      to disabled unless explicitly enabled.
